Refactor GameActor and related classes for improved design
Significantly refactored the GameActor class to enhance its structure and functionality, including the removal of private lists for players and rounds in favor of public properties. Introduced new methods such as AddBotPlayer, PlayCard, and ValidateCard, and updated the Map method to return a comprehensive Game object.

Updated the IGameActor interface to reflect these changes, modified the Round class to track game ID and scores, and introduced Trick and TrickCard classes for managing gameplay. The Game class now includes rounds and scores, while the Player class has a new property to indicate bot status.

Refactored the GameHub class to eliminate Dapr workflow dependencies, improving client-server communication. UI components have been updated for better user experience, and new event classes have been added to enhance the event-driven architecture.

Unit tests have been revised to align with the new logic, and CSS styles have been improved for better visual presentation.

--- a/src/Hearts.BlazorApp/Components/ModalDialog.razor
+++ b/src/Hearts.BlazorApp/Components/ModalDialog.razor
@@ -1,5 +1,26 @@
-﻿<h3>ModalDialog</h3>
+<div class="@ModalClass fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50 @(Show == false ? "hidden" : "")">
+    <div class="bg-white rounded-lg shadow-lg p-6">
+        <h3 class="text-xl">@Title</h3>
+        <div>
+            @ChildContent
+        </div>
+        <div class="flex items-center justify-center">
+            <button class="mt-4 bg-green-600 text-white border-none rounded-md px-2.5 py-1.25 cursor-pointer hover:bg-green-700" @onclick="Close">Close</button>
+        </div>
+    </div>
+</div>
 
 @code {
+    [Parameter] public bool Show { get; set; }
+    [Parameter] public EventCallback<bool> OnClose { get; set; }
+    [Parameter] public required string Title { get; set; }
+    [Parameter] public RenderFragment? ChildContent { get; set; }
 
+    private void Close()
+    {
+        Show = false;
+        OnClose.InvokeAsync(false);
+    }
+
+    private string ModalClass => Show ? "modal-open" : "modal-closed";
 }
