--- a/src/Hearts.BlazorApp/Components/ModalDialog.razor
+++ b/src/Hearts.BlazorApp/Components/ModalDialog.razor
@@ -5,7 +5,7 @@
             @ChildContent
         </div>
         <div class="flex items-center justify-center">
-            <button class="mt-4 bg-green-600 text-white border-none rounded-md px-2.5 py-1.25 cursor-pointer hover:bg-green-700" @onclick="Close">Close</button>
+            <button class="mt-4 bg-red-600 text-white border-none rounded-md px-2.5 py-1.25 cursor-pointer hover:bg-red-700" @onclick="Close">Close</button>
         </div>
     </div>
 </div>
