--- a/src/Hearts.BlazorApp/App.razor
+++ b/src/Hearts.BlazorApp/App.razor
@@ -1,4 +1,6 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+@using Hearts.BlazorApp.Layout.Simplex
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
