--- a/src/Hearts.BlazorApp/Pages/GameTable.razor
+++ b/src/Hearts.BlazorApp/Pages/GameTable.razor
@@ -159,7 +159,7 @@
             </div>
         }
     </div>
-    <div class="flex justify-end h-1/10 p-4">
+    <div class="flex justify-end h-1/10 -mt-4">
         <button @onclick="PassCards" disabled="@passButtonDisabled" class="mr-100 mb-50 w-40 h-20 bg-blue-800 text-white text-xl border-4 border-gray-500 py-2 px-4 rounded">
             Pass
         </button>
